Update play 2.7.3. support Scala 2.13

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: scala
+dist: xenial
 jdk:
-  - oraclejdk8
-script: sbt test
+  - openjdk8
+script: sbt +test
 notifications:
   webhooks:
     urls:
