--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ env:
   - TRAVIS_JDK=8
   - TRAVIS_JDK=11
 
+jobs:
+  allow_failures:
+    - env: TRAVIS_JDK=11
+
 before_install: curl -Ls https://git.io/jabba | bash && . ~/.jabba/jabba.sh
 install: jabba install "adopt@~1.$TRAVIS_JDK.0-0" && jabba use "$_" && java -Xmx32m -version
 
