Fix publish workflow: Ubuntu 24.0.4 does not come with sbt anymore

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,8 @@ jobs:
         with:
           jvm: adoptium:17
 
+      - uses: sbt/setup-sbt@v1
+
       - name: Publish artifacts
         run: sbt ci-release
         env:
